# plan-mcp

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_mcp.py  test_complete_mcp.py  test_mcp.py
.github/workflows/: ci.yml  publish.yml
plan_mcp/: __init__.py  __main__.py  config.py  fastmcp_server.py  models.py  server.py
plan_mcp/api/: gemini_client.py
plan_mcp/prompts/: system_prompts.py
plan_mcp/tools/: code_reviewer.py  execution_analyzer.py  project_planner.py
plan_mcp/utils/: logger.py
